--- a/starter/build.gradle
+++ b/starter/build.gradle
@@ -33,7 +33,7 @@ task clean(type: Delete) {
 ext {
     // Sdk and tools
     // Support library and architecture components support minSdk 14 and above.
-    minSdkVersion = 16
+    minSdkVersion = 19
     targetSdkVersion = 30
     compileSdkVersion = 30
 
@@ -54,9 +54,9 @@ ext {
     roomVersion = '2.2.5'
     koinVersion = '2.0.1'
     truthVersion = '0.44'
-    junitVersion = '4.12'
+    junitVersion = '4.13.2'
     androidXTestCoreVersion = '1.2.0-beta01'
-    robolectricVersion = '4.3-beta-1'
+    robolectricVersion = '4.5.1'
     androidXTestExtKotlinRunnerVersion = '1.1.1'
     archTestingVersion = '2.0.0'
     playServicesVersion = '17.0.0'
